--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -1,185 +1,135 @@
-.login-container{
-    background-color: rgb(207, 207, 152);
-    width: 100%;
-    font-family:Arial, Helvetica, sans-serif;
-    .login{
-        height: 100vh;
-        width: 100vw;
-        .login-content{
-            width: 60%;
-            margin: 0 auto;
-            text-align: center;
-            padding-top: 10%;
-            .title{
-                font-size: 50px;
-                color: rgb(237, 164, 27);
-                font-weight: 600;
-                margin-bottom: 5px;
-            }
-            form{
-                padding: 20px 0;
-                .field{
-                    padding: 5px 0;
-                    label{
-                        font-size: 23px;
-                        font-weight: 500;
-                        text-align: left;
-                        padding: 5px;
-                    }
-                    input{
-                        width: 300px;
-                        height: 60px;
-                        border-radius: 10px;
-                        outline: none;
-                        border: 1px solid #000;
-                        padding: 10px;
-                        font-size: 18px;
-                        font-weight: 400;
-                    }
-                    .error{
-                        color: red;
-                        padding: 5px;
-                        padding-left: 10px;
-                    }
-                    .err{
-                        padding-top: 10px;
-                        padding-right: 40px;
-                    }
-                }
-                .button{
-                    width: 50%;
-                    margin: 0 auto;
-                    text-align: end;
-                    .button-login{
-                        padding: 15px 25px;
-                        font-size: 20px;
-                        font-weight: 600;
-                        background-color: aquamarine;
-                        border-radius: 10px;
-                        transition: all 0.3s ease;
-                        cursor: pointer;
-                        outline: none;
-                        margin-right: 20px;
-                    }
-                    .button-login:hover{
-                        background-color: rgb(122, 198, 173);
-                    }
-                    .button-signup{
-                        padding: 15px 25px;
-                        font-size: 20px;
-                        font-weight: 600;
-                        background-color: aquamarine;
-                        border-radius: 10px;
-                        transition: all 0.3s ease;
-                        cursor: pointer;
-                        outline: none;
-                        margin-right: 20px;
-                    }
-                    .button-signup:hover{
-                        background-color: rgb(122, 198, 173);
-                    }
-                }
-            }
-        }
+// url('https://fonts.googleapis.com/css?family=Jura:400');
+* { font-family: 'Jura'; font-weight: 400; font-size: 16px; }
+body { margin: 0; padding: 0; }
+h1,h2,h3,h4,h5,h6,p { margin: 0; }
+
+section#entry-page {
+  display: grid;
+  grid-template-columns: 1fr minmax(200px,400px) 1fr;
+  grid-template-rows: 1fr minmax(auto,1fr) 1fr;
+  grid-gap: 10px;
+  width: 100%;
+  height: 100vh;
+  background: linear-gradient(-45deg, #EE7752, #E73C7E, #23A6D5, #23D5AB);
+  background-size: 400% 400%;
+  animation: Gradient 15s ease infinite;
+  box-sizing: border-box;
+  form {
+    grid-column: 2;
+    grid-row: 2;
+    display: grid;
+    grid-gap: 10px;
+    margin: auto 0;
+    padding: 20px;
+    background-color: rgba(255,255,255,0.9);
+    border-radius: 10px;
+    box-shadow: 0 32px 64px rgba(0,0,0,0.2);
+    h2 {
+      margin-bottom: 5px;
+      text-align: center;
+      text-shadow: 0 4px 16px #fff;
+      font-size: 30px;
+      font-weight: 100;
     }
+    fieldset {
+      margin: 0;
+      background-color: #fff;
+      border: none;
+      border-radius: 5px;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+      legend {
+        padding: 5px;
+        background-color: #fff;
+        border-radius: 5px;
+      }
+      ul {
+        margin: 0;
+        padding: 0;
+        li {
+          display: grid;
+          align-items: center;
+          margin: 10px;
+          a {
+            color: #02c;
+          }
+          em {
+            grid-column: span 2;
+            text-align: center;
+            padding: 5px;
+          }
+          label {
+            text-align: left;
+            padding-bottom: 2px;
+          }
+          input {
+            font-size: 16px;
+            padding: 5px;
+            border: 1px solid #ddd;
+            border-radius: 5px;
+            &:hover {
+              border: 1px solid #aaf;
+            }
+          }
+        }
+      }
+    }
+    button {
+      padding: 10px;
+      border:1px solid rgba(0,0,0,0);
+      border-radius: 5px;
+      background: #fff;
+      box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+      cursor: pointer;
+      transition: all 0.4s ease;
+      &:hover {
+        background-color: #eef;
+        border: 1px solid #aaf;
+      }
+    }
+    .button{
+      text-align: center;
+        padding: 10px;
+        border:1px solid rgba(0,0,0,0);
+        border-radius: 5px;
+        background: #fff;
+        box-shadow: 0 1px 3px rgba(0,0,0,0.2);
+        cursor: pointer;
+        transition: all 0.4s ease;
+        &:hover {
+            background-color: #eef;
+            border: 1px solid #aaf;
+      }
+    }
+  }
+}
+@media only screen and (min-width: 420px) {
+  form {
+    h2 {
+      font-size: 40px;
+    }
+    fieldset {
+      ul {
+        li {
+          grid-template-columns: 100px 1fr;
+          label {
+            padding-right: 10px;
+            padding-bottom: 0;
+            text-align: right !important;
+          }
+        }
+      }
+    }
+  }
 }
 
-@media only screen and (max-width: 1024px) {
-    .login-container{
-        .login{
-            .login-content{
-                padding-top: 15%;
-            }
-        }
-    }
-}
-@media only screen and (max-width: 768px) {
-    .login-container{
-        .login{
-            .login-content{
-                padding-top: 17%;
-                form{
-                    padding: 20px 0;
-                    .button{
-                        width: 80%;
-                        margin: 0 auto;
-                        text-align: end;
-                        .button-login{
-                            padding: 15px 25px;
-                            font-size: 20px;
-                            font-weight: 600;
-                            background-color: aquamarine;
-                            border-radius: 10px;
-                            transition: all 0.3s ease;
-                            cursor: pointer;
-                            outline: none;
-                            margin-right: 20px;
-                        }
-                        .button-login:hover{
-                            background-color: rgb(122, 198, 173);
-                        }
-                        .button-signup{
-                            padding: 15px 25px;
-                            font-size: 20px;
-                            font-weight: 600;
-                            background-color: aquamarine;
-                            border-radius: 10px;
-                            transition: all 0.3s ease;
-                            cursor: pointer;
-                            outline: none;
-                            margin-right: 20px;
-                        }
-                        .button-signup:hover{
-                            background-color: rgb(122, 198, 173);
-                        }
-                    }
-                }
-            }
-        }
-    }
-}
-@media only screen and (max-width: 480px) {
-    .login-container{
-        .login{
-            .login-content{
-                padding-top: 17%;
-                form{
-                    padding: 20px 0;
-                    .button{
-                        width: 100%;
-                        margin: 0 auto;
-                        text-align: end;
-                        .button-login{
-                            padding: 10px 20px;
-                            font-size: 18px;
-                            font-weight: 600;
-                            background-color: aquamarine;
-                            border-radius: 10px;
-                            transition: all 0.3s ease;
-                            cursor: pointer;
-                            outline: none;
-                            margin-right: 20px;
-                        }
-                        .button-login:hover{
-                            background-color: rgb(122, 198, 173);
-                        }
-                        .button-signup{
-                            padding: 10px 20px;
-                            font-size: 18px;
-                            font-weight: 600;
-                            background-color: aquamarine;
-                            border-radius: 10px;
-                            transition: all 0.3s ease;
-                            cursor: pointer;
-                            outline: none;
-                            margin-right: 20px;
-                        }
-                        .button-signup:hover{
-                            background-color: rgb(122, 198, 173);
-                        }
-                    }
-                }
-            }
-        }
-    }
+@keyframes Gradient {
+  0% {
+    background-position: 0% 50%
+  }
+  50% {
+    background-position: 100% 50%
+  }
+  100% {
+    background-position: 0% 50%
+  }
 }
