create function Login and SignUp Account then save data into server side

--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -72,6 +72,11 @@ section#entry-page {
           }
         }
       }
+      .err{
+        padding-bottom: 5px;
+        text-align: center;
+        color: red;
+      }
     }
     button {
       padding: 10px;
