--- a/client/src/components/contents/home/Home.scss
+++ b/client/src/components/contents/home/Home.scss
@@ -69,7 +69,7 @@
                 }
             }
         }
-        .home-phim{
+        .home-film{
             margin-top: 10px;
             background-color: aliceblue;
             border-top: 4px solid #d95808;
@@ -110,7 +110,7 @@
                     }
                 }
             }
-            .phimbo-content{
+            .series-content{
                 padding-top: 10px;
                 background-color: #1a1a1a;
                 display: flex;
@@ -135,8 +135,8 @@
                     max-height: 350px;
                 }
             }
-            .home-phim{
-                .phimbo-content{
+            .home-film{
+                .series-content{
                     padding-top: 10px;
                     background-color: #1a1a1a;
                     display: flex;
@@ -160,8 +160,8 @@
                     max-height: 250px;
                 }
             }
-            .home-phim{
-                .phimbo-content{
+            .home-film{
+                .series-content{
                     padding-top: 10px;
                     background-color: #1a1a1a;
                     display: flex;
@@ -190,8 +190,8 @@
                     }
                 }
             }
-            .home-phim{
-                .phimbo-content{
+            .home-film{
+                .series-content{
                     padding-top: 10px;
                     background-color: #1a1a1a;
                     display: flex;
