--- a/client/src/components/contents/films/Films.scss
+++ b/client/src/components/contents/films/Films.scss
@@ -1,8 +1,8 @@
-.fimls_container{
+.films-container{
     background-color: #1a1a1a;
     width: 100%;
     padding: 10px 0;
-    .fimls-content{
+    .films-content{
         border-top: 4px solid #ef5f06;
         width: 60%;
         margin: 0 auto;
@@ -53,7 +53,7 @@
                 opacity: 0.7;
             }
         }
-        .fimlsall{
+        .filmsAll{
             padding-top: 10px;
             background-color: #1a1a1a;
             display: flex;
@@ -86,17 +86,17 @@
     }
 }
 @media only screen and (max-width: 1024px) {
-    .fimls_container{
-        .fimls-content{
+    .films-container{
+        .films-content{
             width: 85%;
         }
     }
 }
 @media only screen and (max-width:768px) {
-    .fimls_container{
-        .fimls-content{
+    .films-container{
+        .films-content{
             width: 95%;
-            .fimlsall{
+            .filmsAll{
                 padding-top: 10px;
                 background-color: #1a1a1a;
                 display: flex;
@@ -110,8 +110,8 @@
     }
 }
 @media only screen and (max-width:480px) {
-    .fimls_container{
-        .fimls-content{
+    .films-container{
+        .films-content{
             width: 99%;
             .selector{
                 select{
@@ -123,7 +123,7 @@
                     font-size: 10px;
                 }
             }
-            .fimlsall{
+            .filmsAll{
                 padding-top: 10px;
                 background-color: #1a1a1a;
                 display: flex;
