--- a/api/views/film/edit.ejs
+++ b/api/views/film/edit.ejs
@@ -44,11 +44,13 @@
                 </div>
                 <div class="form-group">
                     <label>Espisode Current:</label>
-                    <input type="text" class="form-control" name="episodeCurrent" value="<%= episodeCurrent %>" autocomplete="off">
+                    <input type="text" class="form-control" name="episodeCurrent" value="<%= episodeCurrent %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Espisode Total:</label>
-                    <input type="text" class="form-control" name="episodeTotal" value="<%= episodeTotal %>" autocomplete="off">
+                    <input type="text" class="form-control" name="episodeTotal" value="<%= episodeTotal %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Quality:</label>
