--- a/api/views/film/add.ejs
+++ b/api/views/film/add.ejs
@@ -23,7 +23,8 @@
                 </div>
                 <div class="form-group">
                     <label>Origin Name:</label>
-                    <input type="text" class="form-control" name="originName" value="<%= originName %>" autocomplete="off">
+                    <input type="text" class="form-control" name="originName" value="<%= originName %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Content:</label>
@@ -43,11 +44,13 @@
                 </div>
                 <div class="form-group">
                     <label>Espisode Current:</label>
-                    <input type="text" class="form-control" name="episodeCurrent" value="<%= episodeCurrent %>" autocomplete="off">
+                    <input type="text" class="form-control" name="episodeCurrent" value="<%= episodeCurrent %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Espisode Total:</label>
-                    <input type="text" class="form-control" name="episodeTotal" value="<%= episodeTotal %>" autocomplete="off">
+                    <input type="text" class="form-control" name="episodeTotal" value="<%= episodeTotal %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Quality:</label>
@@ -71,11 +74,13 @@
                 </div>
                 <div class="form-group">
                     <label>Name Actor:</label>
-                    <input type="text" class="form-control" name="nameActor" value="<%= nameActor %>" autocomplete="off">
+                    <input type="text" class="form-control" name="nameActor" value="<%= nameActor %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Name Director:</label>
-                    <input type="text" class="form-control" name="nameDirector" value="<%= nameDirector %>" autocomplete="off">
+                    <input type="text" class="form-control" name="nameDirector" value="<%= nameDirector %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Category:</label>
@@ -83,7 +88,8 @@
                 </div>
                 <div class="form-group">
                     <label>Name Server:</label>
-                    <input type="text" class="form-control" name="nameServer" value="<%= nameServer %>" autocomplete="off">
+                    <input type="text" class="form-control" name="nameServer" value="<%= nameServer %>"
+                        autocomplete="off">
                 </div>
                 <div class="form-group">
                     <label>Espisode:</label>
