--- a/api/views/film/index.ejs
+++ b/api/views/film/index.ejs
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 </head>
 
-<body class="container" style="margin-top: 50px; max-width: 97%;">
+<body class="container" style="margin-top: 50px; max-width: 98%; margin-bottom: 50px;">
 
     <div class="card" style="width: 100%;">
         <div class="card-header" style="width: 100%;">
@@ -21,88 +21,91 @@
                 </li>
             </ul>
         </div>
-        <div class="card-body" style="max-width: 100%; overflow: hidden;">
 
+        <div class="card-body" style="max-width: 100%;">
             <% if(data.length) { %>
-                <table class="table" style="max-width: 100%; table-layout: fixed;word-wrap:normal;">
+                <table class="table" style="max-width: 100%; table-layout: fixed; word-wrap:normal;">
                     <thead style="max-width: 100%;">
                         <tr>
-                            <th scope="col" style="max-width: 1%; overflow: hidden;">#</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Id</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Name</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Origin Name</th>
-                            <th scope="col" style="overflow: hidden; max-width: 10%;">Content</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Type</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Status</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Thumb Url</th>
-                            <th scope="col" style="overflow: hidden; max-width: 5%;">Time</th>
-                            <th scope="col" style="overflow: hidden; max-width: 5%;">Espisode Current</th>
-                            <th scope="col" style="overflow: hidden; max-width: 5%;">Espisode Total</th>
-                            <th scope="col" style="overflow: hidden; max-width: 5%;">Quality</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Lang</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Slug</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Year</th>
-                            <th scope="col" style="overflow: hidden; max-width: 6%;">Country</th>
-                            <th max-width="9%">Action</th>
+                            <th scope="col" style=" overflow: hidden; vertical-align: middle; text-align: center;">#</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Id</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Name</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Origin Name</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Content</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Type</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Status</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Thumb Url</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Time</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Espisode Current</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Espisode Total</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Quality</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Lang</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Slug</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Year</th>
+                            <th scope="col" style="overflow: hidden; vertical-align: middle; text-align: center;">Country</th>
+                            <th style="vertical-align: middle;">Action</th>
                         </tr>
                     </thead>
                     <tbody style="max-width: 100%;">
                         <% for(var i=0; i< data.length; i++) { %>
                             <tr>
-                                <th scope="row" style="max-width: 1%; overflow: hidden;">
+                                <th scope="row" style=" overflow: scroll; vertical-align: middle; text-align: center;">
                                     <%= (i+1) %>
                                 </th>
-                                <td style="overflow:scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].id%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].name%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].origin_name%>
                                 </td>
                                 <td
                                     style="overflow-x: scroll; height: 300px; width: 90px; display: contents; display: block;">
                                     <%= data[i].content%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].type%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].status%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].thumb_url%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 5%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].time%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 5%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].episode_current%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 5%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].episode_total%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 5%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].quality%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll;  vertical-align: middle;">
                                     <%= data[i].lang%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].slug%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].year%>
                                 </td>
-                                <td style="overflow: scroll; max-width: 6%;">
+                                <td style="overflow: scroll; vertical-align: middle;">
                                     <%= data[i].country%>
                                 </td>
-                                <td style="width: 100px; display: flex; flex-direction: column;">
-                                    <a class="btn btn-success edit" style=" margin-bottom: 10px"
-                                        href="../film/edit/<%= data[i].id %>">Edit</a>
-                                    <a class="btn btn-danger delete" onclick="return alert('Are You sure?')"
-                                        href="../film/delete/<%= data[i].id %>">Delete</a>
+                                <td style=" vertical-align: middle; width: 100px;">
+                                    <p style="width: 70px; display: flex; flex-direction: column;">
+                                        <a class="btn btn-success edit" style=" margin-bottom: 10px"
+                                            href="../film/edit/<%= data[i].id %>">Edit</a>
+                                        <a class="btn btn-danger delete" onclick="return alert('Are You sure?')"
+                                            href="../film/delete/<%= data[i].id %>">Delete</a>
+                                    </p>
+
                                 </td>
                             </tr>
                             <% } %>
