--- a/client/src/components/login/Login.scss
+++ b/client/src/components/login/Login.scss
@@ -92,7 +92,7 @@ section#entry-page {
       }
     }
     .button{
-      text-align: center;
+        text-align: center;
         padding: 10px;
         border:1px solid rgba(0,0,0,0);
         border-radius: 5px;
@@ -103,6 +103,16 @@ section#entry-page {
         &:hover {
             background-color: #eef;
             border: 1px solid #aaf;
+      }
+    }
+    .google{
+      width: 100%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      img{
+        width: 23px;
+        margin-right: 5px;
       }
     }
   }
